补充介绍文档

--- a/assets/bundles/bundle.properties
+++ b/assets/bundles/bundle.properties
@@ -1,5 +1,5 @@
-mod.version = beta
-mod.updateDate = 2025 Apr 16
+mod.version = beta-0.1
+mod.updateDate = 2025 Apr 17
 
 settings.helium = Helium configuration
 settings.category.basic = basic settings
