--- a/assets/bundles/bundle.properties
+++ b/assets/bundles/bundle.properties
@@ -2,28 +2,28 @@ mod.version = beta-0.1
 mod.updateDate = 2025 Apr 17
 
 settings.helium = Helium configuration
-settings.category.basic = basic settings
+settings.category.basic = Basic settings
 
-settings.basic.backBlur = background blur
-settings.item.enableBlur = enable background blur
-settings.item.blurScl = blur level
-settings.item.blurSpace = blur strength
+settings.basic.backBlur = Background blur
+settings.item.enableBlur = Enable background blur
+settings.item.blurScl = Blur level
+settings.item.blurSpace = Blur strength
 
-settings.basic.entityInfo = (wait to translate) \u80CC\u666F\u6A21\u7CCA
-settings.item.enableEntityInfoDisplay = (wait to translate) \u542F\u7528\u5B9E\u4F53\u4FE1\u606F\u663E\u793A
-settings.item.enableHealthBarDisplay = (wait to translate) \u542F\u7528\u751F\u547D\u503C\u663E\u793A\u9762\u677F
-settings.item.enableUnitStatusDisplay = (wait to translate) \u542F\u7528\u5355\u4F4D\u72B6\u6001\u663E\u793A
-settings.item.entityInfoHotKey = (wait to translate) \u4FE1\u606F\u663E\u793A\u63A7\u5236\u70ED\u952E
-settings.item.entityInfoScale = (wait to translate) \u4FE1\u606F\u663E\u793A\u7F29\u653E
-settings.item.entityInfoAlpha = (wait to translate) \u4FE1\u606F\u6307\u793A\u5668\u900F\u660E\u5EA6
-settings.item.showAttackRange = (wait to translate) \u663E\u793A\u653B\u51FB\u8303\u56F4
-settings.item.showHealRange = (wait to translate) \u663E\u793A\u4FEE\u590D\u8303\u56F4
-settings.item.showOverdriveRange = (wait to translate) \u663E\u793A\u8D85\u901F\u6295\u5F71\u8303\u56F4
-settings.item.hiddenTeams = (wait to translate) \u9690\u85CF\u7684\u961F\u4F0D
+settings.basic.entityInfo = Background blur
+settings.item.enableEntityInfoDisplay = Enable entity info display
+settings.item.enableHealthBarDisplay = Enable health bar
+settings.item.enableUnitStatusDisplay = Enable status effect display
+settings.item.entityInfoHotKey = Entity info setting hotkey
+settings.item.entityInfoScale = Entity info showing scale
+settings.item.entityInfoAlpha = Entity info showing alpha
+settings.item.showAttackRange = Show attack range
+settings.item.showHealRange = Show heal range
+settings.item.showOverdriveRange = Show overdrive range
+settings.item.hiddenTeams = Hidden teams
 
-infos.relaunchEnsure = (wait to translate) \u4E00\u4E9B\u914D\u7F6E\u9879\u7684\u53D8\u66F4\u9700\u8981\u91CD\u542F\u751F\u6548
-infos.confirmResetConfig = (wait to translate) \u786E\u5B9A\u8981\u6062\u590D\u9ED8\u8BA4\u8BBE\u7F6E\u5417\uFF1F
+infos.relaunchEnsure = Some configure change must be restart game to take effect
+infos.confirmResetConfig = Are you sure to relaunch game?
 
-misc.later = (wait to translate) \u7A0D\u540E\u91CD\u542F
-misc.exitGame = (wait to translate) \u9000\u51FA\u6E38\u620F
-misc.recDefault = (wait to translate) \u6062\u590D\u9ED8\u8BA4\u8BBE\u7F6E
+misc.later = Later relaunch
+misc.exitGame = Exit game
+misc.recDefault = Restore default
