--- a/assets/bundles/bundle.properties
+++ b/assets/bundles/bundle.properties
@@ -1,7 +1,7 @@
-mod.version = beta-0.1
+mod.version = beta-0.2
 mod.updateDate = 2025 Apr 17
 
-settings.helium = Helium configuration
+settings.helium = Helium Config
 settings.category.basic = Basic settings
 
 settings.basic.backBlur = Background blur
@@ -9,7 +9,7 @@ settings.item.enableBlur = Enable background blur
 settings.item.blurScl = Blur level
 settings.item.blurSpace = Blur strength
 
-settings.basic.entityInfo = Background blur
+settings.basic.entityInfo = In-game entity info
 settings.item.enableEntityInfoDisplay = Enable entity info display
 settings.item.enableHealthBarDisplay = Enable health bar
 settings.item.enableUnitStatusDisplay = Enable status effect display
