--- a/assets/bundles/bundle.properties
+++ b/assets/bundles/bundle.properties
@@ -3,6 +3,7 @@ mod.updateDate = 2025 Apr 17
 
 settings.helium = Helium Config
 settings.category.basic = Basic settings
+settings.category.debug = (wait to translate) \u8C03\u8BD5\u8BBE\u7F6E
 
 settings.basic.backBlur = Background blur
 settings.item.enableBlur = Enable background blur
@@ -20,6 +21,9 @@ settings.item.showAttackRange = Show attack range
 settings.item.showHealRange = Show heal range
 settings.item.showOverdriveRange = Show overdrive range
 settings.item.hiddenTeams = Hidden teams
+
+settings.debug.logging = (wait to translate) \u65E5\u5FD7\u4FE1\u606F
+settings.item.loadingInfo = (wait to translate) \u8F93\u51FA\u52A0\u8F7D\u4FE1\u606F
 
 infos.relaunchEnsure = Some configure change must be restart game to take effect
 infos.confirmResetConfig = Are you sure to relaunch game?
