实现局内快速队伍开关配置

--- a/assets/bundles/bundle.properties
+++ b/assets/bundles/bundle.properties
@@ -1,5 +1,5 @@
 mod.version = beta-0.2
-mod.updateDate = 2025 Apr 19
+mod.updateDate = 2025 Apr 22
 
 settings.helium = Helium Config
 settings.category.basic = Basic settings
@@ -27,6 +27,11 @@ settings.item.loadingInfo = (wait to translate) \u8F93\u51FA\u52A0\u8F7D\u4FE1\u
 
 infos.relaunchEnsure = Some configure change must be restart game to take effect
 infos.confirmResetConfig = Are you sure to relaunch game?
+infos.enabledTeams = (wait to translate) \u542F\u7528\u7684\u961F\u4F0D
+infos.entityDetails = (wait to translate) \u8BE6\u7EC6\u4FE1\u606F
+infos.entityRange = (wait to translate) \u8303\u56F4\u663E\u793A\u5668
+infos.healthDisplay = (wait to translate) \u751F\u547D\u663E\u793A\u5668
+infos.statusDisplay = (wait to translate) \u72B6\u6001\u6307\u793A\u5668
 
 misc.later = Later relaunch
 misc.exitGame = Exit game
