--- a/assets/bundles/bundle.properties
+++ b/assets/bundles/bundle.properties
@@ -1,5 +1,5 @@
 mod.version = beta-0.2
-mod.updateDate = 2025 Apr 22
+mod.updateDate = 2025 Apr 24
 
 settings.helium = Helium Config
 settings.category.basic = Basic settings
@@ -14,24 +14,31 @@ settings.basic.entityInfo = In-game entity info
 settings.item.enableEntityInfoDisplay = Enable entity info display
 settings.item.enableHealthBarDisplay = Enable health bar
 settings.item.enableUnitStatusDisplay = Enable status effect display
-settings.item.entityInfoHotKey = Entity info setting hotkey
-settings.item.entityInfoScale = Entity info showing scale
-settings.item.entityInfoAlpha = Entity info showing alpha
+settings.item.enableRangeDisplay = Enable entity range display
 settings.item.showAttackRange = Show attack range
 settings.item.showHealRange = Show heal range
 settings.item.showOverdriveRange = Show overdrive range
-settings.item.hiddenTeams = Hidden teams
+settings.item.entityInfoHotKey = Entity info setting hotkey
+settings.item.entityInfoScale = Entity info showing scale
+settings.item.entityInfoAlpha = Entity info showing alpha
 
-settings.debug.logging = (wait to translate) \u65E5\u5FD7\u4FE1\u606F
-settings.item.loadingInfo = (wait to translate) \u8F93\u51FA\u52A0\u8F7D\u4FE1\u606F
+settings.debug.logging = Log infos
+settings.item.loadingInfo = Output loading info
+
+config.showAttackRange = Show attack range
+config.showHealRange = Show heal range
+config.showOverdriveRange = Show overdrive range
 
 infos.relaunchEnsure = Some configure change must be restart game to take effect
 infos.confirmResetConfig = Are you sure to relaunch game?
-infos.enabledTeams = (wait to translate) \u542F\u7528\u7684\u961F\u4F0D
-infos.entityDetails = (wait to translate) \u8BE6\u7EC6\u4FE1\u606F
-infos.entityRange = (wait to translate) \u8303\u56F4\u663E\u793A\u5668
-infos.healthDisplay = (wait to translate) \u751F\u547D\u663E\u793A\u5668
-infos.statusDisplay = (wait to translate) \u72B6\u6001\u6307\u793A\u5668
+infos.enabledTeams = Enabled Teams
+infos.entityDetails = Details
+infos.entityRange = Range
+infos.healthDisplay = Health
+infos.statusDisplay = Status
+infos.enableAll = Enable All
+infos.disableAll = Disable All
+infos.allSetting = All Settings
 
 misc.later = Later relaunch
 misc.exitGame = Exit game
