实现局内快速队伍开关配置

--- a/assets/bundles/bundle.properties
+++ b/assets/bundles/bundle.properties
@@ -2,15 +2,15 @@ mod.version = beta-0.3
 mod.updateDate = 2025 Apr 24
 
 settings.helium = Helium Config
-settings.category.basic = Basic settings
-settings.category.debug = (wait to translate) \u8C03\u8BD5\u8BBE\u7F6E
+settings.category.basic = Basic Settings
+settings.category.debug = Debug Settings
 
-settings.basic.backBlur = Background blur
+settings.basic.backBlur = Background Blur
 settings.item.enableBlur = Enable background blur
 settings.item.blurScl = Blur level
 settings.item.blurSpace = Blur strength
 
-settings.basic.entityInfo = In-game entity info
+settings.basic.entityInfo = In-game Entity Information
 settings.item.enableEntityInfoDisplay = Enable entity info display
 settings.item.enableHealthBarDisplay = Enable health bar
 settings.item.enableUnitStatusDisplay = Enable status effect display
@@ -22,7 +22,10 @@ settings.item.entityInfoHotKey = Entity info setting hotkey
 settings.item.entityInfoScale = Entity info showing scale
 settings.item.entityInfoAlpha = Entity info showing alpha
 
-settings.debug.logging = Log infos
+settings.basic.placement = Placement Panel
+settings.item.enableBetterPlacement = Enable better placement panel
+
+settings.debug.logging = Log Information
 settings.item.loadingInfo = Output loading info
 
 config.showAttackRange = Show attack range
