--- a/assets/bundles/bundle.properties
+++ b/assets/bundles/bundle.properties
@@ -1,5 +1,5 @@
 mod.version = beta-0.3
-mod.updateDate = 2025 Apr 24
+mod.updateDate = 2025 Apr 25
 
 settings.helium = Helium Config
 settings.category.basic = Basic Settings
@@ -31,6 +31,14 @@ settings.item.loadingInfo = Output loading info
 config.showAttackRange = Show attack range
 config.showHealRange = Show heal range
 config.showOverdriveRange = Show overdrive range
+
+dialog.mods.enabled = (wait to translate) \u5DF2\u542F\u7528
+dialog.mods.disabled = (wait to translate) \u5DF2\u7981\u7528
+dialog.mods.enableAll = (wait to translate) \u542F\u7528\u5168\u90E8
+dialog.mods.disableAll = (wait to translate) \u7981\u7528\u5168\u90E8
+dialog.mods.checkUpdate = (wait to translate) \u68C0\u67E5\u66F4\u65B0
+dialog.mods.generateList = (wait to translate) \u751F\u6210\u6E05\u5355
+dialog.mods.author = (wait to translate) \u4F5C\u8005\uFF1A{0}
 
 infos.relaunchEnsure = Some configure change must be restart game to take effect
 infos.confirmResetConfig = Are you sure to relaunch game?
