实现更好的mod浏览器

--- a/assets/bundles/bundle.properties
+++ b/assets/bundles/bundle.properties
@@ -1,5 +1,5 @@
-mod.version = beta-0.3
-mod.updateDate = 2025 Apr 25
+he.mod.version = beta-0.3
+he.mod.updateDate = 2025 Apr 28
 
 settings.helium = Helium Config
 settings.category.basic = Basic Settings
@@ -25,6 +25,8 @@ settings.item.entityInfoAlpha = Entity info showing alpha
 settings.basic.placement = Placement Panel
 settings.item.enableBetterPlacement = Enable better placement panel
 
+settings.basic.modsDialog = Mods Manager
+
 settings.debug.logging = Log Information
 settings.item.loadingInfo = Output loading info
 
@@ -32,13 +34,60 @@ config.showAttackRange = Show attack range
 config.showHealRange = Show heal range
 config.showOverdriveRange = Show overdrive range
 
-dialog.mods.enabled = (wait to translate) \u5DF2\u542F\u7528
-dialog.mods.disabled = (wait to translate) \u5DF2\u7981\u7528
-dialog.mods.enableAll = (wait to translate) \u542F\u7528\u5168\u90E8
-dialog.mods.disableAll = (wait to translate) \u7981\u7528\u5168\u90E8
-dialog.mods.checkUpdate = (wait to translate) \u68C0\u67E5\u66F4\u65B0
-dialog.mods.generateList = (wait to translate) \u751F\u6210\u6E05\u5355
-dialog.mods.author = (wait to translate) \u4F5C\u8005\uFF1A{0}
+dialog.mods.enabled = Enabled Mods
+dialog.mods.disabled = Disabled Mods
+dialog.mods.menu = Menu
+dialog.mods.upgradeAll = All Upgrades
+dialog.mods.checkUpdate = Check Update
+dialog.mods.checkFailed = Get failed
+dialog.mods.downloadFailed = Download failed
+dialog.mods.checkUpdating = Checking update
+dialog.mods.updateValid = An update available for this mod\nLatest version:{0}.
+dialog.mods.updateValidS = A valid update was found.
+dialog.mods.modStatCorrect = This mod was correctly loaded.
+dialog.mods.modStatError = This mod is invalid.
+dialog.mods.isLatest = Current is the latest version.
+dialog.mods.generateList = To Mod List
+dialog.mods.refresh = Refresh
+dialog.mods.importFav = Import Favorites
+dialog.mods.exportFav = Export Favorites
+dialog.mods.hideInvalid = Hide invalid mods
+dialog.mods.author = Author: {0}
+dialog.mods.version = Version\uFF1A{0}
+dialog.mods.jarMod = This mod contains Java program.
+dialog.mods.jsMod = This mod contains JavaScript program.
+dialog.mods.hostMod = This mod will work on the server.
+dialog.mods.deprecated = This mod adapt game version was deprecated.\n[lightgray]missing "minGameVersion:{0}".
+dialog.mods.unsupported = Unsupported game version, your game was deprecated.
+dialog.mods.libMissing = Some dependence of this mod was missing.
+dialog.mods.libIncomplete = Some dependence of this mod was load failed.
+dialog.mods.libCircleDepending = There is some circular dependence in this mod dependence.
+dialog.mods.error = An error occurred with this mod, please report to the mod developer.
+dialog.mods.blackListed = This mod was blocklisted.
+dialog.mods.description = Description
+dialog.mods.rawText = Raw Text
+dialog.mods.contents = Mod Contents
+dialog.mods.shouldRelaunch = Should relaunch game
+dialog.mods.relaunch = Should relaunch game to apply modifies.
+dialog.mods.confirmDeleteHe = Delete Helium mod must relaunch game now!
+dialog.mods.deleteMod = Delete Mod
+dialog.mods.updateMod = Update Mod
+dialog.mods.downloadMod = Download Mod
+dialog.mods.importMod = Import Mod
+dialog.mods.otherHandle = Other Handles
+dialog.mods.reinstall = (Reinstall)
+dialog.mods.downloadComplete = Download Complete!
+dialog.mods.downloading = Downloading {0}
+dialog.mods.noLink = No Github link
+dialog.mods.exportLink = Export mod link
+dialog.mods.githubLink = The Github link of this mod\uFF1A
+dialog.mods.noGithubRepo = This mod was not open sourced on github
+dialog.mods.noDownloadLink = Download link was not found.
+dialog.mods.installed = This mod has been installed
+dialog.mods.newVersion = New version\uFF01
+dialog.mods.favorites = Favorites
+dialog.mods.noFavorites = No favorite mod yet
+dialog.mods.mods = Mod List
 
 infos.relaunchEnsure = Some configure change must be restart game to take effect
 infos.confirmResetConfig = Are you sure to relaunch game?
@@ -50,7 +99,17 @@ infos.statusDisplay = Status
 infos.enableAll = Enable All
 infos.disableAll = Disable All
 infos.allSetting = All Settings
+infos.copied = Link has been copied to clipboard.
 
 misc.later = Later relaunch
 misc.exitGame = Exit game
 misc.recDefault = Restore default
+misc.open = Open
+misc.close = Close
+misc.copy = Copy
+misc.sequence = Forward Sort
+misc.reverse = Reverse Sort
+misc.download = Download
+misc.complete = Complete
+infos.exception = Exception!
+infos.error = Error!
