实现更好的mod浏览器

--- a/assets/bundles/bundle.properties
+++ b/assets/bundles/bundle.properties
@@ -76,6 +76,9 @@ dialog.mods.downloadMod = Download Mod
 dialog.mods.importMod = Import Mod
 dialog.mods.otherHandle = Other Handles
 dialog.mods.reinstall = (Reinstall)
+dialog.mods.inputGithubLink = (wait to translate) \uF308 \u8F93\u5165mod\u7684Github\u4ED3\u5E93\u94FE\u63A5
+dialog.mods.parsing = (wait to translate) \u6B63\u5728\u89E3\u6790\u94FE\u63A5
+dialog.mods.parseFailed = (wait to translate) \u89E3\u6790\u5931\u8D25\uFF0C\u8BF7\u68C0\u67E5\u94FE\u63A5\u662F\u5426\u6B63\u786E
 dialog.mods.downloadComplete = Download Complete!
 dialog.mods.downloading = Downloading {0}
 dialog.mods.noLink = No Github link
@@ -88,6 +91,8 @@ dialog.mods.newVersion = New version\uFF01
 dialog.mods.favorites = Favorites
 dialog.mods.noFavorites = No favorite mod yet
 dialog.mods.mods = Mod List
+dialog.mods.openFolderFailed = (wait to translate) \u65E0\u6CD5\u6253\u5F00\u76EE\u5F55
+dialog.mods.cantOpenOnAndroid = (wait to translate) \u5728Android\u8BBE\u5907\u4E0A\u65E0\u6CD5\u6253\u5F00\u6587\u4EF6\u8DEF\u5F84\n\u4F60\u53EF\u4EE5\u590D\u5236\u5982\u4E0B\u8DEF\u5F84\u624B\u52A8\u5728\u6587\u4EF6\u7BA1\u7406\u5668\u4E2D\u6253\u5F00\uFF1A
 
 infos.relaunchEnsure = Some configure change must be restart game to take effect
 infos.confirmResetConfig = Are you sure to relaunch game?
@@ -101,6 +106,8 @@ infos.disableAll = Disable All
 infos.allSetting = All Settings
 infos.copied = Link has been copied to clipboard.
 
+infos.wip = (wait to translate) WIP
+infos.notImplementYet = (wait to translate) \u6682\u672A\u5B9E\u73B0
 misc.later = Later relaunch
 misc.exitGame = Exit game
 misc.recDefault = Restore default
