修复裁切空间外的详情面板显示问题 简化范围显示器动画效果 优化部分图标

--- a/assets/bundles/bundle.properties
+++ b/assets/bundles/bundle.properties
@@ -1,8 +1,9 @@
-he.mod.version = beta-0.3
-he.mod.updateDate = 2025 Apr 28
+he.mod.version = beta-0.4
+he.mod.updateDate = 2025 Apr 29
 
 settings.helium = Helium Config
 settings.category.basic = Basic Settings
+settings.category.keyBind = (wait to translate) \u57FA\u7840\u8BBE\u7F6E
 settings.category.debug = Debug Settings
 
 settings.basic.backBlur = Background Blur
@@ -26,6 +27,7 @@ settings.basic.placement = Placement Panel
 settings.item.enableBetterPlacement = Enable better placement panel
 
 settings.basic.modsDialog = Mods Manager
+settings.item.enableBetterModsDialog = (wait to translate) \u542F\u7528\u66F4\u597D\u7684\u6A21\u7EC4\u7BA1\u7406\u5668
 
 settings.debug.logging = Log Information
 settings.item.loadingInfo = Output loading info
@@ -40,6 +42,7 @@ dialog.mods.menu = Menu
 dialog.mods.upgradeAll = All Upgrades
 dialog.mods.checkUpdate = Check Update
 dialog.mods.checkFailed = Get failed
+dialog.mods.checkUpdateFailed = (wait to translate) \u68C0\u67E5\u66F4\u65B0\u5931\u8D25
 dialog.mods.downloadFailed = Download failed
 dialog.mods.checkUpdating = Checking update
 dialog.mods.updateValid = An update available for this mod\nLatest version:{0}.
