修复mod浏览器的性能问题

--- a/assets/bundles/bundle.properties
+++ b/assets/bundles/bundle.properties
@@ -1,9 +1,9 @@
 he.mod.version = beta-0.4
-he.mod.updateDate = 2025 Apr 29
+he.mod.updateDate = 2025 Apr 30
 
 settings.helium = Helium Config
 settings.category.basic = Basic Settings
-settings.category.keyBind = (wait to translate) \u57FA\u7840\u8BBE\u7F6E
+settings.category.keyBind = Key Bindings
 settings.category.debug = Debug Settings
 
 settings.basic.backBlur = Background Blur
@@ -19,7 +19,6 @@ settings.item.enableRangeDisplay = Enable entity range display
 settings.item.showAttackRange = Show attack range
 settings.item.showHealRange = Show heal range
 settings.item.showOverdriveRange = Show overdrive range
-settings.item.entityInfoHotKey = Entity info setting hotkey
 settings.item.entityInfoScale = Entity info showing scale
 settings.item.entityInfoAlpha = Entity info showing alpha
 
@@ -27,10 +26,17 @@ settings.basic.placement = Placement Panel
 settings.item.enableBetterPlacement = Enable better placement panel
 
 settings.basic.modsDialog = Mods Manager
-settings.item.enableBetterModsDialog = (wait to translate) \u542F\u7528\u66F4\u597D\u7684\u6A21\u7EC4\u7BA1\u7406\u5668
+settings.item.enableBetterModsDialog = Enable better mods dialog
 
 settings.debug.logging = Log Information
 settings.item.loadingInfo = Output loading info
+
+settings.keyBind.placement = Placement Panel
+settings.item.placementFoldHotKey = Fold/Unfold placement panel
+settings.item.switchFastPageHotKey = Switch inventory page
+
+settings.keyBind.entityInfo = In-game Entity Information
+settings.item.entityInfoHotKey = Entity info setting hotkey
 
 config.showAttackRange = Show attack range
 config.showHealRange = Show heal range
@@ -42,7 +48,7 @@ dialog.mods.menu = Menu
 dialog.mods.upgradeAll = All Upgrades
 dialog.mods.checkUpdate = Check Update
 dialog.mods.checkFailed = Get failed
-dialog.mods.checkUpdateFailed = (wait to translate) \u68C0\u67E5\u66F4\u65B0\u5931\u8D25
+dialog.mods.checkUpdateFailed = Check update failed
 dialog.mods.downloadFailed = Download failed
 dialog.mods.checkUpdating = Checking update
 dialog.mods.updateValid = An update available for this mod\nLatest version:{0}.
@@ -79,9 +85,9 @@ dialog.mods.downloadMod = Download Mod
 dialog.mods.importMod = Import Mod
 dialog.mods.otherHandle = Other Handles
 dialog.mods.reinstall = (Reinstall)
-dialog.mods.inputGithubLink = (wait to translate) \uF308 \u8F93\u5165mod\u7684Github\u4ED3\u5E93\u94FE\u63A5
-dialog.mods.parsing = (wait to translate) \u6B63\u5728\u89E3\u6790\u94FE\u63A5
-dialog.mods.parseFailed = (wait to translate) \u89E3\u6790\u5931\u8D25\uFF0C\u8BF7\u68C0\u67E5\u94FE\u63A5\u662F\u5426\u6B63\u786E
+dialog.mods.inputGithubLink = Input github repository link:
+dialog.mods.parsing = Parsing Link
+dialog.mods.parseFailed = Parse failed, check link
 dialog.mods.downloadComplete = Download Complete!
 dialog.mods.downloading = Downloading {0}
 dialog.mods.noLink = No Github link
@@ -94,8 +100,11 @@ dialog.mods.newVersion = New version\uFF01
 dialog.mods.favorites = Favorites
 dialog.mods.noFavorites = No favorite mod yet
 dialog.mods.mods = Mod List
-dialog.mods.openFolderFailed = (wait to translate) \u65E0\u6CD5\u6253\u5F00\u76EE\u5F55
-dialog.mods.cantOpenOnAndroid = (wait to translate) \u5728Android\u8BBE\u5907\u4E0A\u65E0\u6CD5\u6253\u5F00\u6587\u4EF6\u8DEF\u5F84\n\u4F60\u53EF\u4EE5\u590D\u5236\u5982\u4E0B\u8DEF\u5F84\u624B\u52A8\u5728\u6587\u4EF6\u7BA1\u7406\u5668\u4E2D\u6253\u5F00\uFF1A
+dialog.mods.openFolderFailed = Cannot Open Folder
+dialog.mods.cantOpenOnAndroid = The file path cannot be opened on an Android device\nYou can copy the following path to open it in the file manager:
+
+tools.tip.ctrlEntityInfo = Select entity and show details
+tools.tip.configEntityInfo = Entity info display settings
 
 infos.relaunchEnsure = Some configure change must be restart game to take effect
 infos.confirmResetConfig = Are you sure to relaunch game?
@@ -109,8 +118,8 @@ infos.disableAll = Disable All
 infos.allSetting = All Settings
 infos.copied = Link has been copied to clipboard.
 
-infos.wip = (wait to translate) WIP
-infos.notImplementYet = (wait to translate) \u6682\u672A\u5B9E\u73B0
+infos.wip = WIP
+infos.notImplementYet = Not Implement Yet
 misc.later = Later relaunch
 misc.exitGame = Exit game
 misc.recDefault = Restore default
