开始引入mod整合包工具

--- a/assets/bundles/bundle.properties
+++ b/assets/bundles/bundle.properties
@@ -1,5 +1,5 @@
 he.mod.version = beta-0.4
-he.mod.updateDate = 2025 Apr 30
+he.mod.updateDate = 2025 May 1
 
 settings.helium = Helium Config
 settings.category.basic = Basic Settings
@@ -56,10 +56,11 @@ dialog.mods.updateValidS = A valid update was found.
 dialog.mods.modStatCorrect = This mod was correctly loaded.
 dialog.mods.modStatError = This mod is invalid.
 dialog.mods.isLatest = Current is the latest version.
-dialog.mods.generateList = To Mod List
+dialog.mods.exportPack = (wait to translate) \u5BFC\u51FA\u6574\u5408\u5305
 dialog.mods.refresh = Refresh
 dialog.mods.importFav = Import Favorites
 dialog.mods.exportFav = Export Favorites
+dialog.mods.favoritesText = (wait to translate) \u5BFC\u51FA\u6536\u85CF\u5939\u6587\u672C\uFF1A
 dialog.mods.hideInvalid = Hide invalid mods
 dialog.mods.author = Author: {0}
 dialog.mods.version = Version\uFF1A{0}
@@ -117,9 +118,11 @@ infos.enableAll = Enable All
 infos.disableAll = Disable All
 infos.allSetting = All Settings
 infos.copied = Link has been copied to clipboard.
-
 infos.wip = WIP
 infos.notImplementYet = Not Implement Yet
+infos.exception = Exception!
+infos.error = Error!
+
 misc.later = Later relaunch
 misc.exitGame = Exit game
 misc.recDefault = Restore default
@@ -130,5 +133,4 @@ misc.sequence = Forward Sort
 misc.reverse = Reverse Sort
 misc.download = Download
 misc.complete = Complete
-infos.exception = Exception!
-infos.error = Error!
+misc.save = (wait to translate) \u4FDD\u5B58
