修复搜索的大小写敏感问题

--- a/assets/bundles/bundle.properties
+++ b/assets/bundles/bundle.properties
@@ -1,4 +1,4 @@
-he.mod.version = beta-0.4
+he.mod.version = beta-0.5
 he.mod.updateDate = 2025 May 1
 
 settings.helium = Helium Config
@@ -56,11 +56,11 @@ dialog.mods.updateValidS = A valid update was found.
 dialog.mods.modStatCorrect = This mod was correctly loaded.
 dialog.mods.modStatError = This mod is invalid.
 dialog.mods.isLatest = Current is the latest version.
-dialog.mods.exportPack = (wait to translate) \u5BFC\u51FA\u6574\u5408\u5305
+dialog.mods.exportPack = Export ModPack
 dialog.mods.refresh = Refresh
 dialog.mods.importFav = Import Favorites
 dialog.mods.exportFav = Export Favorites
-dialog.mods.favoritesText = (wait to translate) \u5BFC\u51FA\u6536\u85CF\u5939\u6587\u672C\uFF1A
+dialog.mods.favoritesText = Export favorites text\uFF1A
 dialog.mods.hideInvalid = Hide invalid mods
 dialog.mods.author = Author: {0}
 dialog.mods.version = Version\uFF1A{0}
@@ -133,4 +133,4 @@ misc.sequence = Forward Sort
 misc.reverse = Reverse Sort
 misc.download = Download
 misc.complete = Complete
-misc.save = (wait to translate) \u4FDD\u5B58
+misc.save = Save
