修复149版本的崩溃问题及遮挡问题

--- a/assets/bundles/bundle.properties
+++ b/assets/bundles/bundle.properties
@@ -1,5 +1,5 @@
-he.mod.version = beta-0.5b
-he.mod.updateDate = 2025 May 1
+he.mod.version = beta-0.6
+he.mod.updateDate = 2025 May 2
 
 settings.helium = Helium Config
 settings.category.basic = Basic Settings
