--- a/assets/bundles/bundle.properties
+++ b/assets/bundles/bundle.properties
@@ -1,5 +1,5 @@
 he.mod.version = beta-0.6
-he.mod.updateDate = 2025 May 2
+he.mod.updateDate = 2025 Jun 5
 
 settings.helium = Helium Config
 settings.category.basic = Basic Settings
@@ -59,6 +59,7 @@ dialog.mods.isLatest = Current is the latest version.
 dialog.mods.exportPack = Export ModPack
 dialog.mods.refresh = Refresh
 dialog.mods.importFav = Import Favorites
+dialog.mods.inputFavText = Input favorites text\uFF1A
 dialog.mods.exportFav = Export Favorites
 dialog.mods.favoritesText = Export favorites text\uFF1A
 dialog.mods.hideInvalid = Hide invalid mods
