--- a/bundleInfo.properties
+++ b/bundleInfo.properties
@@ -9,4 +9,5 @@ targetLocales = [\
   ru = (\u043D\u0443\u0436\u0435\u043D \u043F\u0435\u0440\u0435\u0432\u043E\u0434)\
   ja = (\u7FFB\u8A33\u5F85\u3061)\
   de_DE = (\u00DCbersetzung w\u00FCnschen)\
+  id_ID = (Untuk diterjemahkan)\
   ]
