--- a/gradle.properties
+++ b/gradle.properties
@@ -12,5 +12,8 @@ org.gradle.jvmargs=--illegal-access=permit \
 --add-exports=jdk.compiler/com.sun.tools.javac.comp=ALL-UNNAMED \
 --add-exports=java.base/sun.reflect.annotation=ALL-UNNAMED
 
+mindustryVersion = v149
+arcVersion = v149
+
 modOutputDir =
 debugGamePath =
