修复悬停问题，修复整合包工具的未检查问题

--- a/gradle.properties
+++ b/gradle.properties
@@ -15,5 +15,5 @@ org.gradle.jvmargs=--illegal-access=permit \
 mindustryVersion = v149
 arcVersion = v149
 
-modOutputDir = /home/local/.local/share/Mindustry/mods
-debugGamePath = /home/local/Games/mindustry/Mindustry.jar
+modOutputDir =
+debugGamePath =
