修复悬停问题，修复整合包工具的未检查问题

--- a/assets/bundles/bundle.properties
+++ b/assets/bundles/bundle.properties
@@ -1,5 +1,5 @@
 he.mod.version = beta-0.8
-he.mod.updateDate = 2025 Jun 16
+he.mod.updateDate = 2025 Jun 17
 
 settings.helium = Helium Config
 settings.category.basic = Basic Settings
@@ -56,6 +56,7 @@ dialog.mods.updateValidS = A valid update was found.
 dialog.mods.modStatCorrect = This mod was correctly loaded.
 dialog.mods.modStatError = This mod is invalid.
 dialog.mods.isLatest = Current is the latest version.
+dialog.mods.localFile = (wait to translate) \u672C\u5730\u6A21\u7EC4
 dialog.mods.exportPack = Export ModPack
 dialog.mods.refresh = Refresh
 dialog.mods.importFav = Import Favorites
@@ -119,6 +120,8 @@ dialog.modPacker.customFile = (wait to translate) \u6DFB\u52A0\u81EA\u5B9A\u4E49
 dialog.modPacker.addFile = (wait to translate) \u6DFB\u52A0
 dialog.modPacker.packInfo = (wait to translate) \ \uF129 \u6574\u5408\u5305\u57FA\u672C\u4FE1\u606F
 dialog.modPacker.packIcon = (wait to translate) \u56FE\u6807
+dialog.modPacker.imageError = (wait to translate) \u9009\u62E9\u7684\u6587\u4EF6\u4E0D\u5408\u6CD5
+dialog.modPacker.iconRequire = (wait to translate) \u56FE\u6807\u7684\u957F\u5BBD\u5FC5\u987B\u662F\u4E00\u81F4\u7684
 dialog.modPacker.packName = (wait to translate) \u6574\u5408\u5305\u540D\u79F0
 dialog.modPacker.internalName = (wait to translate) \u5185\u90E8\u540D\u79F0\uFF08\u53EF\u9009\uFF09
 dialog.modPacker.description = (wait to translate) \u6574\u5408\u5305\u63CF\u8FF0\uFF08\u53EF\u9009\uFF09
