重构信息显示器核心代码，大大优化性能问题（是真的极大的优化了性能，是的，这让帧率至少上升了数倍）

--- a/ModpackModel/assets/bundles/bundle.properties
+++ b/ModpackModel/assets/bundles/bundle.properties
@@ -1,38 +1,45 @@
 modpack.mod.version = unspecified
-modpack.mod.updateDate = 2025 Jun 17
+modpack.mod.updateDate = 2025 Jun 28
 he.mod.version = beta-0.7
 he.mod.updateDate = 2025 Jun 12
 
-dialog.installPack.title = (wait to translate) \u5B89\u88C5\u6574\u5408\u5305
-dialog.installPack.helperInfo = (wait to translate) \u4F60\u6B63\u5728\u5B89\u88C5\u4E00\u4E2A\u6574\u5408\u5305\uFF1A
-dialog.installPack.name = (wait to translate) \u6574\u5408\u5305\u540D\u79F0
-dialog.installPack.author = (wait to translate) \u4F5C\u8005
-dialog.installPack.version = (wait to translate) \u7248\u672C
-dialog.installPack.description = (wait to translate) \u6574\u5408\u5305\u63CF\u8FF0
-dialog.installPack.contains = (wait to translate) \u5305\u542B\u7684\u5185\u5BB9\uFF1A
-dialog.installPack.content = (wait to translate) {0}\u4E2Amod, {1}\u4E2A\u6587\u4EF6
-dialog.installPack.type = (wait to translate) \u6574\u5408\u5305\u7C7B\u578B
-dialog.installPack.skipRepeat = (wait to translate) \u8DF3\u8FC7\u91CD\u590D\u6587\u4EF6
-dialog.installPack.rawBackup = (wait to translate) \u4F7F\u7528\u539F\u59CB\u5907\u4EFD\u6587\u4EF6\u683C\u5F0F
-dialog.installPack.force = (wait to translate) \u5F3A\u5236\u8986\u76D6\u6A21\u7EC4\u7248\u672C
-dialog.installPack.uncheck = (wait to translate) \u4E0D\u68C0\u67E5\u6A21\u7EC4\u53EF\u7528\u6027
+dialog.installPack.title = Install Modpack
+dialog.installPack.helperInfo = You are installing a modpack:
+dialog.installPack.name = Modpack Name
+dialog.installPack.author = Author
+dialog.installPack.version = Version
+dialog.installPack.description = Modpack Description
+dialog.installPack.contains = Contains:
+dialog.installPack.content = {0} mods, {1} files
+dialog.installPack.type = Modpack Type
+dialog.installPack.skipRepeat = Skip duplicate files
+dialog.installPack.rawBackup = Use raw backup file format (compressed file)
+dialog.installPack.force = Force overwrite mod versions
+dialog.installPack.uncheck = Don't check mod availability
 dialog.installPack.forceVersion = (wait to translate) \u5F3A\u5236\u6E38\u620F\u7248\u672C
-dialog.installPack.complete = (wait to translate) \u6574\u5408\u5305\u5DF2\u6210\u529F\u5B89\u88C5\uFF0C\u8BF7\u91CD\u542F\u6E38\u620F
+dialog.installPack.complete = Modpack successfully installed. Please restart the game.
 
-dialog.recovering.title = (wait to translate) \u6062\u590D\u5907\u4EFD
-dialog.recovering.confirm = (wait to translate) \u786E\u8BA4\u8981\u6062\u590D\u5230\u5907\u4EFD\u7684\u6E38\u620F\u72B6\u6001\u5417\uFF1F
-dialog.recovering.text = (wait to translate) \u6B63\u5728\u6062\u590D\u5907\u4EFD
-dialog.recovering.complete = (wait to translate) \u5DF2\u6062\u590D\u81F3\u5907\u4EFD\u65F6\u7684\u6E38\u620F\u72B6\u6001
+modpack.distribute.name = Distribute
+modpack.distribute.description = In distribution mode, modpacks simply install the integrated mods and files into the player's game, and do not operate on the original files except for duplicate files.
+modpack.shadow.name = Shadow
+modpack.shadow.description = In hidden mode, modpacks will disable other mods that the player is currently installing, but will not affect the original game files.
+modpack.override.name = Overwrite
+modpack.override.description = In overwrite mode, installing the modpack will completely overwrite the game directory with the modpack file after a complete backup of the original game files.
 
-dialog.installing.title = (wait to translate) \u5B89\u88C5\u4E2D
-dialog.installing.text = (wait to translate) \u6B63\u5728\u5B89\u88C5\u6574\u5408\u5305
+dialog.recovering.title = Restoring Backup
+dialog.recovering.confirm = Confirm restore to the backup game state?
+dialog.recovering.text = Restoring backup
+dialog.recovering.complete = Restored to the backup game state
 
-misc.backup = (wait to translate) \u5907\u4EFD
-misc.install = (wait to translate) \u5B89\u88C5
-misc.installComplete = (wait to translate) \u5B89\u88C5\u5B8C\u6210
-misc.installFailed = (wait to translate) \u5B89\u88C5\u5931\u8D25
-misc.recoverCompleted = (wait to translate) \u6062\u590D\u5B8C\u6210
-misc.recoverFailed = (wait to translate) \u6062\u590D\u5931\u8D25
+dialog.installing.title = Installing
+dialog.installing.text = Installing modpack
 
-infos.backup.description = (wait to translate) \u5B89\u88C5\u6574\u5408\u5305\u521B\u5EFA\u7684\u5907\u4EFD\u6587\u4EF6\uFF0C\u542F\u7528\u6B64mod\u4EE5\u5C06\u6E38\u620F\u6062\u590D\u5230\u5907\u4EFD\u65F6\u7684\u72B6\u6001\u3002
-infos.backup.subTitle = (wait to translate) \u542F\u7528\u4EE5\u6062\u590D\u6B64\u5907\u4EFD
+misc.backup = Backup
+misc.install = Install
+misc.installComplete = Installation Complete
+misc.installFailed = Installation Failed
+misc.recoverCompleted = Restore Completed
+misc.recoverFailed = Restore Failed
+
+infos.backup.description = Backup file created during modpack installation. Enable this mod to restore the game to the backup state.
+infos.backup.subTitle = Enable to restore this backup
