--- a/assets/bundles/bundle.properties
+++ b/assets/bundles/bundle.properties
@@ -1,5 +1,5 @@
 he.mod.version = beta-0.8
-he.mod.updateDate = 2025 Jun 17
+he.mod.updateDate = 2025 Jun 28
 
 settings.helium = Helium Config
 settings.category.basic = Basic Settings
@@ -16,6 +16,7 @@ settings.item.enableEntityInfoDisplay = Enable entity info display
 settings.item.enableHealthBarDisplay = Enable health bar
 settings.item.enableUnitStatusDisplay = Enable status effect display
 settings.item.enableRangeDisplay = Enable entity range display
+settings.item.lowRangeRenderer = (wait to translate) \u7B80\u5316\u8303\u56F4\u663E\u793A\u5668\u7684\u52A8\u753B\u6548\u679C
 settings.item.showAttackRange = Show attack range
 settings.item.showHealRange = Show heal range
 settings.item.showOverdriveRange = Show overdrive range
@@ -56,7 +57,7 @@ dialog.mods.updateValidS = A valid update was found.
 dialog.mods.modStatCorrect = This mod was correctly loaded.
 dialog.mods.modStatError = This mod is invalid.
 dialog.mods.isLatest = Current is the latest version.
-dialog.mods.localFile = (wait to translate) \u672C\u5730\u6A21\u7EC4
+dialog.mods.localFile = Local file mod.
 dialog.mods.exportPack = Export ModPack
 dialog.mods.refresh = Refresh
 dialog.mods.importFav = Import Favorites
@@ -106,50 +107,50 @@ dialog.mods.mods = Mod List
 dialog.mods.openFolderFailed = Cannot Open Folder
 dialog.mods.cantOpenOnAndroid = The file path cannot be opened on an Android device\nYou can copy the following path to open it in the file manager:
 
-dialog.modPacker.title = (wait to translate) \u521B\u5EFA\u6574\u5408\u5305
-dialog.modPacker.showAll = (wait to translate) \u663E\u793A\u4E0D\u53EF\u7528\u7684mod
-dialog.modPacker.unselect = (wait to translate) \u53EF\u9009\u7684mod
-dialog.modPacker.select = (wait to translate) \u5DF2\u9009\u7684mod
-dialog.modPacker.options = (wait to translate) \uE87C \u6574\u5408\u5305\u9009\u9879
-dialog.modPacker.fileEntries = (wait to translate) \uF15B \u9644\u52A0\u6587\u4EF6
-dialog.modPacker.map = (wait to translate) \u6DFB\u52A0\u81EA\u5B9A\u4E49\u5730\u56FE
-dialog.modPacker.campaign = (wait to translate) \u6DFB\u52A0\u6218\u5F79\u5730\u56FE
-dialog.modPacker.schematic = (wait to translate) \u9009\u62E9\u84DD\u56FE
-dialog.modPacker.settings = (wait to translate) \u8BBE\u7F6E\u53CA\u6218\u5F79\u6570\u636E
-dialog.modPacker.customFile = (wait to translate) \u6DFB\u52A0\u81EA\u5B9A\u4E49\u6587\u4EF6
-dialog.modPacker.addFile = (wait to translate) \u6DFB\u52A0
-dialog.modPacker.packInfo = (wait to translate) \ \uF129 \u6574\u5408\u5305\u57FA\u672C\u4FE1\u606F
-dialog.modPacker.packIcon = (wait to translate) \u56FE\u6807
-dialog.modPacker.imageError = (wait to translate) \u9009\u62E9\u7684\u6587\u4EF6\u4E0D\u5408\u6CD5
-dialog.modPacker.iconRequire = (wait to translate) \u56FE\u6807\u7684\u957F\u5BBD\u5FC5\u987B\u662F\u4E00\u81F4\u7684
-dialog.modPacker.packName = (wait to translate) \u6574\u5408\u5305\u540D\u79F0
-dialog.modPacker.internalName = (wait to translate) \u5185\u90E8\u540D\u79F0\uFF08\u53EF\u9009\uFF09
-dialog.modPacker.description = (wait to translate) \u6574\u5408\u5305\u63CF\u8FF0\uFF08\u53EF\u9009\uFF09
-dialog.modPacker.author = (wait to translate) \u4F5C\u8005
-dialog.modPacker.version = (wait to translate) \u7248\u672C\u53F7
-dialog.modPacker.packConfig = (wait to translate) \uE853 \u6574\u5408\u5305\u914D\u7F6E
-dialog.modPacker.type = (wait to translate) \u6574\u5408\u5305\u7C7B\u578B
-dialog.modPacker.skipRepeat = (wait to translate) \u8DF3\u8FC7\u91CD\u590D\u6587\u4EF6
-dialog.modPacker.rawBackup = (wait to translate) \u4F7F\u7528\u539F\u59CB\u5907\u4EFD\u6587\u4EF6\u683C\u5F0F
-dialog.modPacker.force = (wait to translate) \u5F3A\u5236\u8986\u76D6\u6A21\u7EC4\u7248\u672C
-dialog.modPacker.uncheck = (wait to translate) \u4E0D\u68C0\u67E5\u6A21\u7EC4\u53EF\u7528\u6027
-dialog.modPacker.forceVersion = (wait to translate) \u5F3A\u5236\u6E38\u620F\u7248\u672C
-dialog.modPacker.editFIle = (wait to translate) \u7F16\u8F91\u6574\u5408\u5305
-dialog.modPacker.export = (wait to translate) \u5BFC\u51FA\u6574\u5408\u5305\u6587\u4EF6
-dialog.modPacker.inModPack = (wait to translate) \u6765\u81EA\u8BFB\u53D6\u7684\u6574\u5408\u5305
-dialog.modPacker.completed = (wait to translate) \u5BFC\u51FA\u6574\u5408\u5305\u5B8C\u6210
-dialog.modPacker.failed = (wait to translate) \u5BFC\u51FA\u5931\u8D25
-dialog.modPacker.metaError = (wait to translate) \u8BF7\u68C0\u67E5\u6574\u5408\u5305\u4FE1\u606F
-dialog.modPacker.filesError = (wait to translate) \u8BF7\u68C0\u67E5\u9644\u52A0\u6587\u4EF6\u8BBE\u7F6E
-dialog.modPacker.modsError = (wait to translate) \u6574\u5408\u5305\u6709\u4E0D\u53EF\u7528\u7684mod
-dialog.modPacker.modsDependenciesError = (wait to translate) \u6574\u5408\u7684mod\u7F3A\u5C11\u4F9D\u8D56\u9879
+dialog.modPacker.title = Create a Modpack
+dialog.modPacker.showAll = Show invalid mods
+dialog.modPacker.unselect = Selectable mods
+dialog.modPacker.select = Selected mods
+dialog.modPacker.options = \uE87C Modpack Options
+dialog.modPacker.fileEntries = \uF15B Attached Files
+dialog.modPacker.map = Add custom maps
+dialog.modPacker.campaign = Add campaign maps
+dialog.modPacker.schematic = Add schematic file
+dialog.modPacker.settings = Select settings.bin file
+dialog.modPacker.customFile = Add custom file
+dialog.modPacker.addFile = Add file
+dialog.modPacker.packInfo = \ \uF129 Modpack Meta Information
+dialog.modPacker.packIcon = Pack Icon
+dialog.modPacker.imageError = This file is not valid image
+dialog.modPacker.iconRequire = The height and width of the icon must be consistent
+dialog.modPacker.packName = Modpack Name
+dialog.modPacker.internalName = Internal Name (Optional)
+dialog.modPacker.description = Modpack Description (Optional)
+dialog.modPacker.author = Author
+dialog.modPacker.version = Version
+dialog.modPacker.packConfig = \uE853 Modpack Configures
+dialog.modPacker.type = Modpack Type
+dialog.modPacker.skipRepeat = Skip repeat file
+dialog.modPacker.rawBackup = Use raw backup file format (compressed file)
+dialog.modPacker.force = Force overwrite mod version
+dialog.modPacker.uncheck = Don't check mod availability
+dialog.modPacker.discard = (wait to translate) \u5F53\u524D\u7F16\u8F91\u7684\u4FE1\u606F\u90FD\u5C06\u4E22\u5931
+dialog.modPacker.editFIle = Edit a Modpack file
+dialog.modPacker.export = Export Modpack
+dialog.modPacker.inModPack = Read in editing Modpack
+dialog.modPacker.completed = Export Modpack complete.
+dialog.modPacker.failed = Export failed.
+dialog.modPacker.metaError = Please check modpack meta info
+dialog.modPacker.filesError = Please check attached files
+dialog.modPacker.modsError = Some mods are not usable
+dialog.modPacker.modsDependenciesError = Some mods lack dependencies
 
-modpack.distribute.name = (wait to translate) \u5206\u53D1
-modpack.distribute.description = (wait to translate) \u5206\u53D1\u6A21\u5F0F\u4E0B\uFF0C\u6574\u5408\u5305\u4EC5\u7B80\u5355\u7684\u5C06\u6574\u5408\u7684mod\u548C\u6587\u4EF6\u5B89\u88C5\u5230\u73A9\u5BB6\u7684\u6E38\u620F\u4E2D\uFF0C\u9664\u91CD\u590D\u6587\u4EF6\u5916\u4E0D\u5BF9\u539F\u6709\u6587\u4EF6\u8FDB\u884C\u64CD\u4F5C\u3002
-modpack.shadow.name = (wait to translate) \u9690\u85CF
-modpack.shadow.description = (wait to translate) \u9690\u85CF\u6A21\u5F0F\u4E0B\uFF0C\u6574\u5408\u5305\u5B89\u88C5\u540E\u5C06\u4F1A\u7981\u7528\u73A9\u5BB6\u5F53\u524D\u5DF2\u5B89\u88C5\u7684\u5176\u4ED6mod\uFF0C\u4F46\u4E0D\u4F1A\u5F71\u54CD\u539F\u6709\u6E38\u620F\u6587\u4EF6\u3002
-modpack.override.name = (wait to translate) \u8986\u76D6
-modpack.override.description = (wait to translate) \u8986\u76D6\u6A21\u5F0F\u4E0B\uFF0C\u5B89\u88C5\u6574\u5408\u5305\u4F1A\u5C06\u539F\u6E38\u620F\u6587\u4EF6\u5B8C\u6574\u5907\u4EFD\u540E\uFF0C\u4F7F\u7528\u6574\u5408\u5305\u6587\u4EF6\u5B8C\u5168\u8986\u76D6\u6E38\u620F\u76EE\u5F55\u3002
+modpack.distribute.name = Distribute
+modpack.distribute.description = In distribution mode, modpacks simply install the integrated mods and files into the player's game, and do not operate on the original files except for duplicate files.
+modpack.shadow.name = Shadow
+modpack.shadow.description = In hidden mode, modpacks will disable other mods that the player is currently installing, but will not affect the original game files.
+modpack.override.name = Overwrite
+modpack.override.description = In overwrite mode, installing the modpack will completely overwrite the game directory with the modpack file after a complete backup of the original game files.
 
 tools.tip.ctrlEntityInfo = Select entity and show details
 tools.tip.configEntityInfo = Entity info display settings
@@ -175,7 +176,7 @@ misc.exitGame = Exit game
 misc.recDefault = Restore default
 misc.open = Open
 misc.close = Close
-misc.cancel = (wait to translate) \u53D6\u6D88
+misc.cancel = Cancel
 misc.copy = Copy
 misc.sequence = Forward Sort
 misc.reverse = Reverse Sort
