重构信息显示器核心代码，大大优化性能问题（是真的极大的优化了性能，是的，这让帧率至少上升了数倍）

--- a/assets/bundles/bundle.properties
+++ b/assets/bundles/bundle.properties
@@ -1,5 +1,5 @@
 he.mod.version = beta-0.8
-he.mod.updateDate = 2025 Jun 28
+he.mod.updateDate = 2025 Jul 7
 
 settings.helium = Helium Config
 settings.category.basic = Basic Settings
@@ -16,12 +16,16 @@ settings.item.enableEntityInfoDisplay = Enable entity info display
 settings.item.enableHealthBarDisplay = Enable health bar
 settings.item.enableUnitStatusDisplay = Enable status effect display
 settings.item.enableRangeDisplay = Enable entity range display
-settings.item.lowRangeRenderer = (wait to translate) \u7B80\u5316\u8303\u56F4\u663E\u793A\u5668\u7684\u52A8\u753B\u6548\u679C
+settings.item.rangeRenderLevel = (wait to translate) \u8303\u56F4\u663E\u793A\u5668\u8D28\u91CF
 settings.item.showAttackRange = Show attack range
 settings.item.showHealRange = Show heal range
 settings.item.showOverdriveRange = Show overdrive range
 settings.item.entityInfoScale = Entity info showing scale
 settings.item.entityInfoAlpha = Entity info showing alpha
+
+range.animate.full = (wait to translate) \u7CBE\u7EC6
+range.animate.simplified = (wait to translate) \u7B80\u5316
+range.animate.prof = (wait to translate) \u6027\u80FD
 
 settings.basic.placement = Placement Panel
 settings.item.enableBetterPlacement = Enable better placement panel
