--- a/assets/bundles/bundle.properties
+++ b/assets/bundles/bundle.properties
@@ -29,6 +29,7 @@ range.animate.prof = (wait to translate) \u6027\u80FD
 
 settings.basic.placement = Placement Panel
 settings.item.enableBetterPlacement = Enable better placement panel
+settings.item.blockColumns = (wait to translate) \u653E\u7F6E\u9762\u677F\u65B9\u5757\u663E\u793A\u5217\u6570
 
 settings.basic.modsDialog = Mods Manager
 settings.item.enableBetterModsDialog = Enable better mods dialog
