--- a/assets/bundles/bundle.properties
+++ b/assets/bundles/bundle.properties
@@ -1,5 +1,5 @@
 he.mod.version = beta-1.0
-he.mod.updateDate = 2025 Jul 13
+he.mod.updateDate = 2025 Jul 20
 
 settings.helium = Helium Config
 settings.category.basic = Basic Settings
@@ -188,3 +188,4 @@ misc.reverse = Reverse Sort
 misc.download = Download
 misc.complete = Complete
 misc.save = Save
+misc.unknow = (wait to translate) \u672A\u77E5
